--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 machine:
   environment:
-    - GOLANG_VERSION: 1.4rc2
-   pre:
+    GOLANG_VERSION: 1.4rc2
+  pre:
     - curl -k -L -o go.tar.gz https://golang.org/dl/go$GOLANG_VERSION.linux-amd64.tar.gz
     - sudo rm -rf /usr/local/go
     - sudo tar -C /usr/local -xzf go.tar.gz
