Add pwd to figure out what is going on

--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ test:
   pre:
     - go version
   override:
+    - pwd
     - test -z $(gofmt -s -l . | tee /dev/stderr)
     - go vet ./...
     - test -z $(golint ./...          | tee /dev/stderr)
