Genetically figure out how to conf

--- a/circle.yml
+++ b/circle.yml
@@ -27,8 +27,10 @@ test:
     - test -z $(gofmt -s -l . | tee /dev/stderr)
     - go vet ./...
     - test -z $(golint ./...          | tee /dev/stderr)
+    - pwd
+    # - cd ~/.go_project/github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME &&
     - go list ./... | xargs -I{} goveralls -repotoken $COVERALLS_TOKEN -race {}:
-      pwd: ~/.go_project/github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+        pwd: ~/.go_project/github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
 
 # Add coverage back in later
 
