--- a/circle.yml
+++ b/circle.yml
@@ -28,9 +28,7 @@ test:
     - go vet ./...
     - test -z $(golint ./...          | tee /dev/stderr)
     - pwd
-    # - cd ~/.go_project/github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME &&
-    - go list ./... | xargs -I{} goveralls -repotoken $COVERALLS_TOKEN -race {}:
-        pwd: ~/.go_project/github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+    - cd $HOME/.go_project/github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME && go list ./... | xargs -I{} goveralls -repotoken $COVERALLS_TOKEN -race {}
 
 # Add coverage back in later
 
